fix error escape sequence \d

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -7,9 +7,9 @@
       },
       "source": [
         "# Proyek Analisis Data: [Input Nama Dataset]\n",
-        "- **Nama:** [Zaskila Nurfadilla]\n",
-        "- **Email:** [@nurfadillazaskila24@gmail.com]\n",
-        "- **ID Dicoding:** []"
+        "- **Nama:** [Ali Asgar Zainal Abidin]\n",
+        "- **Email:** [alidicoding@gmail.com]\n",
+        "- **ID Dicoding:** [aliasgarzainalabidin]"
       ]
     },
     {
